# market-hub

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/backend/: .credo.exs  .formatter.exs  Dockerfile  mix.exs
apps/backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
apps/backend/lib/: hub.ex  hub_web.ex
apps/backend/lib/hub/: application.ex  charts.ex  insights.ex  repo.ex
apps/backend/lib/hub/charts/: saved_chart.ex
apps/backend/lib/hub/chat/: prompt_builder.ex
apps/backend/lib/hub/insights/: aa_event.ex  retrieval.ex
apps/backend/lib/hub/queries/: query.ex
apps/backend/lib/hub_web/: endpoint.ex  error_json.ex  router.ex
apps/backend/lib/hub_web/controllers/: api_controller.ex  health_controller.ex
apps/backend/lib/hub_web/plugs/: rate_limiter.ex
apps/backend/priv/repo/: seeds.exs
apps/backend/scripts/: dev.sh
apps/backend/test/: test_helper.exs
apps/backend/test/support/: conn_case.ex
apps/frontend/: .eslintrc.cjs  Dockerfile  index.html  jest.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src/__tests__/: charts.preview.test.tsx  charts.test.tsx  smoke.test.tsx
apps/frontend/src/pages/: Charts.tsx  Chat.tsx  Home.tsx  Insights.tsx
apps/scrapers/: Dockerfile  pyproject.toml
apps/scrapers/app/: main.py
apps/scrapers/tests/: test_health.py
data/adobe/: mock.json  mock.jsonl
scripts/: dev.sh
(+11 files in other folders)
